--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.9.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
